[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = '0.0.0'

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
lnetatmo = "4.2.0"
graphyte = "1.7.1"
unidecode = "1.4.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff" ] }
prospector-profile-utils = "1.23.0"
prospector-profile-duplicated = "1.10.5"
setuptools="80.9.0"

[project]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dynamic = ["dependencies", "version"]
name = 'netatmo2graphite'
description = 'Not used'
requires-python = ">=3.10"

[project.scripts]
netatmo2graphite = 'netatmo2graphite.py:main'
